# dfm.io

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  config.toml  environment.yml  generate_pubs.py  index.html  index.xml  pelicanconf.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml
about/: index.html
assets/scss/: custom.scss
categories/: index.html  index.xml
content/: 2012-08-03-python-c-extensions.md  2014-07-22-the-histogram.md  2014-07-23-eccentricity.md  2014-07-29-histogram1.md  2014-12-12-mixture-models.md  2015-01-15-aas-hack-day.md  2015-07-06-exopop.md  2017-05-04-stan-c++.md  2017-06-01-fitting-a-plane.md  2017-07-12-travis-latex.md  2017-10-16-autocorr.md  2018-08-02-pymc-tensorflow.md  2018-08-21-emcee-pymc3.md  2018-10-11-pymc3-mass-matrix.md  2019-10-15-pymc-pytorch.md  README.md  _index.md  about.md
content/cv/: index.html
content/downloads/notebooks/: eccentricity.ipynb  fitting-a-plane.ipynb  histogram.ipynb  (+2 more)
content/pages/: blog.md  code.md  cv.md  research.md
content/posts/: 2015-01-15-aas-hack-day.md  extending-jax.md  index.html  pymc-tensorflow.md  python-c-extensions.md  simple-python-module.md  stan-c++.md  travis-latex.md
dfm_theme/templates/: analytics.html  archives.html  article.html  base.html  cv.html  index.html  page.html  topavatar.html  topbar.html
layouts/_default/: baseof.html  single.html
layouts/partials/: math.html
posts/: autocorr.ipynb  emcee-pymc3.ipynb  exopop.ipynb  fitting-a-plane.ipynb  histogram1.ipynb  index.html  index.xml  ipython_kernel_config.py  mixture-models.ipynb  pymc-pytorch.ipynb  pymc-tensorflow.ipynb
posts/aas-hack-day/: index.html
posts/autocorr/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/emcee-pymc3/: index.html  metadata.yml  post.ipynb  pyproject.toml  requirements.in
posts/exopop/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/exopop/data/: q1_q16_koi.h5
posts/extending-jax/: index.html
posts/fitting-a-plane/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/histogram1/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/intro-to-numpyro/: index.html  post.ipynb  pyproject.toml
posts/mixture-models/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/pymc-pytorch/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/pymc-tensorflow/: index.html
posts/pymc3-mass-matrix/: index.html  metadata.yml  post.ipynb  pyproject.toml
posts/python-c-extensions/: index.html
posts/simple-python-module/: index.html
posts/stan-c++/: index.html
posts/travis-latex/: index.html
results/logs/: histogram1.ipynb
results/posts/: histogram1.ipynb
scripts/: generate_matrix.py  render-notebooks  render_notebooks.py
tags/: index.html  index.xml
tags/pymc/: index.html  index.xml
web/: config.toml
web/layouts/: index.html
web/scripts/: render-notebooks
workflow/: Snakefile
workflow/envs/: autocorr.yml  emcee-pymc3.yml  execute.yml  exopop.yml  pymc-pytorch.yml  pymc-tensorflow.yml
workflow/rules/: execute.smk
(+13 files in other folders)
